--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
         "vlucas/phpdotenv": "~2.2",
         "guzzlehttp/guzzle": "6.3.*"
     },
+    "require-dev": {
+        "fzaninotto/faker": "~1.4",
+        "phpunit/phpunit": "~5.0",
+        "mockery/mockery": "~0.9"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
